--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,13 @@ android {
     buildFeatures {
         dataBinding true
     }
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+        unitTests {
+            includeAndroidResources = true
+            returnDefaultValues = true
+        }
+    }
 }
 
 dependencies {
@@ -42,6 +49,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "io.mockk:mockk:1.12.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestUtil "androidx.test:orchestrator:1.4.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:2.2.0"
 }
